app/kumactl/cmd/install/testdata/install-transparent-proxy.dns.golden.txt
### IPv4 ###

* raw
-A PREROUTING -p udp --sport 53 -j CT --zone 1
-A OUTPUT -p udp --dport 53 -m owner --uid-owner 0 -j CT --zone 1
-A OUTPUT -p udp --sport 12345 -m owner --uid-owner 0 -j CT --zone 2
-A OUTPUT -p udp --dport 53 -j CT --zone 2
COMMIT
* nat
-N KUMA_MESH_INBOUND
-N KUMA_MESH_OUTBOUND
-N KUMA_MESH_INBOUND_REDIRECT
-N KUMA_MESH_OUTBOUND_REDIRECT
-A PREROUTING -p tcp -j KUMA_MESH_INBOUND
-I OUTPUT 1 -p udp --dport 53 -m owner --uid-owner 0 -j dnsJumpTargetPlaceholder
-I OUTPUT 2 -p udp --dport 53 -j REDIRECT --to-ports 12345
-A OUTPUT -p tcp -j KUMA_MESH_OUTBOUND
-A KUMA_MESH_INBOUND -p tcp -j KUMA_MESH_INBOUND_REDIRECT
-A KUMA_MESH_OUTBOUND -s subnetPlaceholder/mask -o ifPlaceholder -j RETURN
-A KUMA_MESH_OUTBOUND -p tcp -o ifPlaceholder ! -d subnetPlaceholder/mask -m owner --uid-owner 0 -j KUMA_MESH_INBOUND_REDIRECT
-A KUMA_MESH_OUTBOUND -p tcp -o ifPlaceholder -m owner ! --uid-owner 0 -j RETURN
-A KUMA_MESH_OUTBOUND -m owner --uid-owner 0 -j RETURN
-A KUMA_MESH_OUTBOUND -p tcp --dport 53 -j REDIRECT --to-ports 12345
-A KUMA_MESH_OUTBOUND -d subnetPlaceholder/mask -j RETURN
-A KUMA_MESH_OUTBOUND -j KUMA_MESH_OUTBOUND_REDIRECT
-A KUMA_MESH_INBOUND_REDIRECT -p tcp -j REDIRECT --to-ports inboundPort
-A KUMA_MESH_OUTBOUND_REDIRECT -p tcp -j REDIRECT --to-ports 15001
COMMIT
